# zero2prod

./: Cargo.toml  Dockerfile  Notes.md  README.md  deny.toml  requirements_brew.txt  requirements_cargo.txt  requirements_rustup.txt  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml  security.yml
.sqlx/: query-5ac6777e519cd020775c2c305b3b9a75676c64bd8adfd70f7849626ca6c36247.json  query-6bf20c7fe789fb7362df03a5feb55dff2759399497b58c12ee8a255928575426.json  query-ad378c84875ad72b6b205b538d2922035442710d5e181a671613d3c965a52d36.json  query-bf8297eba8d6281d4f2f1fc9f39d747ca96c25a071389fbbccff7f425c57303b.json  query-d431799201ac17c9411b9d4e046e0f757cc0a35b4fa9ecaec0b5207df7939147.json
Notes/: Ch1-5.md  Ch6-10.md  Notes.md
configurations/: base.yaml  production.yaml
migrations/: 20240624001446_add_status_to_subscriptions_table.sql  20240624005205_make_status_not_null_in_subscriptions.sql  20240624011136_create_subscriptions_token_table.sql  20240811210022_create_users_table.sql  20240811220122_rename_password_column.sql  20240812164132_add_salt_to_users.sql  20240812175535_remove_salt_from_users.sql
scripts/: init_db.sh  sqlx_prepare.sh
src/: authentication.rs  configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html  home.rs
src/routes/login_form/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
