[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1"
claims = "0.7"
validator = "0.16"
reqwest = { version = "0.11", features = ["json"] }
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.21"
argon2 = { version = "0.4", features = ["std"] }

# We need the optional `derive` feature to use `serde`'s procedural macros:
# `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
# The feature is not enabled by default to avoid pulling in
# unnecessary dependencies for projects that do not need it.
serde = { version = "1", features = ["derive"] }
serde-aux = "4"

# Using table-like toml syntax to avoid a super-long line
[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls", # tells sqlx to use the tokio runtime for its futures and rustls as TLS backend
    "macros",               # give us acces to sqlx::query! and sqlx::query_as! macros
    "postgres",             # unlocks Postgres-specific functionality (e.g. non-standard SQL types)
    "uuid",                 # adds support for mapping SQL UUIDs to the Uuid type from the uuid crate
    "chrono",               # adds support for mapping SQL timestamptz to the DateTime<T> type from the chrono crate
    "migrate",              # gives us access to the same functions used under the hood by sqlx-cli to manage migrations so we use them in our test suite
]

# Dependencies for tests and examples
[dev-dependencies]
once_cell = "1"
# We are using fake <= 2.3 because it relies on rand 0.8
# which has been released recently and is not yet used by
# quickcheck
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
serde_json = "1"
linkify = "0.9"

[lints.clippy]
expect_fun_call = "allow"
collapsible_else_if = "allow"
